config-root/namespaces/jx-staging/deng-test-three/deng-test-three-deng-test-three-deploy.yaml
# Source: deng-test-three/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deng-test-three-deng-test-three
  labels:
    draft: draft-app
    chart: "deng-test-three-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: deng-test-three-deng-test-three
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: deng-test-three-deng-test-three
    spec:
      serviceAccountName: deng-test-three-deng-test-three
      containers:
        - name: deng-test-three
          image: "ghcr.io/denglanlan/deng-test-three:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
        - name: "tekton-container-registry-auth"
