config-root/namespaces/jx-staging/deng-test-three/deng-test-three-svc.yaml
# Source: deng-test-three/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deng-test-three
  labels:
    chart: "deng-test-three-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: deng-test-three-deng-test-three
