config-root/namespaces/jx-staging/deng-test-three/deng-test-three-ingress.yaml
# Source: deng-test-three/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: deng-test-three
  namespace: jx-staging
  labels:
    gitops.jenkins-x.io/pipeline: 'namespaces'
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: deng-test-three
              servicePort: 80
      host: deng-test-three-jx-staging.jx3.sky-cloud.net
